Minor nits.